add header markup in html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
     <h1>
         Test Title
     </h1>
+    <header>
+        <img src="#"  class="logo">
+        <ul>
+            <li>Home </li>
+            <li>Products</li>
+            <li>Category</li>
+            <li>about</li>
+            <li>contact</li>
+        </ul>
+        <button type="button">
+            Register/Login
+        </button>
+    </header>
 </body>
 </html>
